# applemusic2flac

./: README.md  pyproject.toml  requirements.txt
src/applemusic2flac/: __init__.py  __main__.py  album.py  audio.py  config.py  config.toml  dataclass.py  ffmpeg_tools.py  framedepth.py  metadata.py  requirements.txt  track.py  utils.py
